added function to hide html with welcome id on start quiz click

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
 
 
-    <div class="wrapper start-center">
+    <div id="welcome" class="wrapper">
 
         <h1>Pokémon Quiz</h1>
 
@@ -29,15 +29,15 @@
         </p>
 
         <div class="top-margin"><button class="start-button">Start Quiz</button></div>
-
-        <!-- <button>placeholder</button>
-
-        <button>placeholder</button>
-
-        <button>placeholder</button>
         
-        <button>placeholder</button> -->
-        
+    </div>
+
+    <div id="questions">
+        <h2>Fav Color?</h2>
+        <button data-answer="Red">Red</button>
+        <button data-answer="Green">Green</button>
+        <button data-answer="Blue">Blue</button>
+        <button data-answer="Yellow">Yellow</button>
     </div>
 
     <script src="assets/js/script.js"></script>
