added for loop to render questions

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     </div>
 
     <div id="questions">
-        <h2>Fav Color?</h2>
+        <!-- <h2>Fav Color?</h2>
         <button data-answer="Red">Red</button>
         <button data-answer="Green">Green</button>
         <button data-answer="Blue">Blue</button>
-        <button data-answer="Yellow">Yellow</button>
+        <button data-answer="Yellow">Yellow</button> -->
     </div>
 
     <script src="assets/js/script.js"></script>
