FINALLY created render function to create questions/choice buttons and move to next question on click

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
         
     </div>
 
-    <div id="questions">
+    <div id="question-div">
+        <ul id="question-ul">
+
+        </ul>
         <!-- <h2>Fav Color?</h2>
         <button data-answer="Red">Red</button>
         <button data-answer="Green">Green</button>
