--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     </div>
 
     <div id="question-div">
-        <ul id="question-ul">
+        <!-- <ul id="question-ul">
 
-        </ul>
+        </ul> -->
         <!-- <h2>Fav Color?</h2>
         <button data-answer="Red">Red</button>
         <button data-answer="Green">Green</button>
