added new js file, added styling to highscore html, commented local storage, going to rewrite

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
         <button data-answer="Yellow">Yellow</button> -->
     </div>
 
+    <div id="end-div">
+
+    </div>
+
     <script src="assets/js/script.js"></script>
 
 </body>
