--- a/high-scores.html
+++ b/high-scores.html
@@ -4,18 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/reset.css"/>
+    <link rel="stylesheet" href="./assets/css/style.css"/>
     <title>Highscores</title>
 </head>
 
 <body>
-    <header>
-
-        <div>
-            <a href = "index.html">Go Back</a>
-        </div>
-
-    </header>
     
+    <div class = "wrapper">
+        <h1>Highscores</h1>
+        <!-- <button>Hello</button> -->
+        <ol id = "highscore-list">
+            <li>TY: 66</li>
+            <li>ff: 33</li>
+            <li>ff: 44</li>
+            <li>ar: 71</li>
+            <li>ew: 67</li>
+        </ol>
+        <button id = "clear">Clear</button>
+        <button><a id="white" href = "index.html">Go Back</button>
+    </div>
+
+    <script src="assets/js/highscore.js"></script>
 </body>
 
 </html>
