stored scores, added sorted list to highscore page

--- a/high-scores.html
+++ b/high-scores.html
@@ -15,14 +15,14 @@
         <h1>Highscores</h1>
         <!-- <button>Hello</button> -->
         <ol id = "highscore-list">
-            <li>TY: 66</li>
+            <!-- <li>TY: 66</li>
             <li>ff: 33</li>
             <li>ff: 44</li>
             <li>ar: 71</li>
-            <li>ew: 67</li>
+            <li>ew: 67</li> -->
         </ol>
         <button id = "clear">Clear</button>
-        <button><a id="white" href = "index.html">Go Back</button>
+        <button><a id="white" href = "/index.html">Go Back</button>
     </div>
 
     <script src="assets/js/highscore.js"></script>
