added finishing touches, fixed bug where restart btn formed twice on last question if wrong

--- a/high-scores.html
+++ b/high-scores.html
@@ -22,7 +22,7 @@
             <li>ew: 67</li> -->
         </ol>
         <button id = "clear">Clear</button>
-        <button><a id="white" href = "/index.html">Go Back</button>
+        <button><a id="white" href = "./index.html">Go Back</button>
     </div>
 
     <script src="assets/js/highscore.js"></script>
