--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <a href= "high-scores.html">View Highscores</a>
         
-        <div id="timer">Time: <span id="timer">0</span></div>
+        <div id="timer">Time: <span id="timer">50</span></div>
         
     </header>
 
@@ -43,7 +43,7 @@
         <button data-answer="Yellow">Yellow</button> -->
     </div>
 
-    <div id="end-div">
+    <div id="end-div" class="center">
 
     </div>
 
