added notes to js

--- a/index.html
+++ b/index.html
@@ -25,27 +25,16 @@
         <h1>Pokémon Quiz</h1>
 
         <p>
-            Answer the questions in the alloted time. Every wrong question will deduct 10 seconds/points from your score. Press START to begin.
+            Answer the questions in the alloted time. Every wrong answer will deduct 10 seconds/points from your score. Press START to begin.
         </p>
 
         <div class="top-margin"><button class="start-button">Start Quiz</button></div>
         
     </div>
 
-    <div id="question-div">
-        <!-- <ul id="question-ul">
+    <div id="question-div"></div>
 
-        </ul> -->
-        <!-- <h2>Fav Color?</h2>
-        <button data-answer="Red">Red</button>
-        <button data-answer="Green">Green</button>
-        <button data-answer="Blue">Blue</button>
-        <button data-answer="Yellow">Yellow</button> -->
-    </div>
-
-    <div id="end-div" class="center">
-
-    </div>
+    <div id="end-div" class="center"></div>
 
     <script src="assets/js/script.js"></script>
 
