--- a/high-scores.html
+++ b/high-scores.html
@@ -13,14 +13,7 @@
     
     <div class = "wrapper">
         <h1>Highscores</h1>
-        <!-- <button>Hello</button> -->
-        <ol id = "highscore-list">
-            <!-- <li>TY: 66</li>
-            <li>ff: 33</li>
-            <li>ff: 44</li>
-            <li>ar: 71</li>
-            <li>ew: 67</li> -->
-        </ol>
+        <ol id = "highscore-list"></ol>
         <button id = "clear">Clear</button>
         <button><a id="white" href = "./index.html">Go Back</button>
     </div>
